--- a/TMessagesProj/src/main/res/values/strings.xml
+++ b/TMessagesProj/src/main/res/values/strings.xml
@@ -475,6 +475,7 @@
     <string name="SPASelectItems">Select SPA Items</string>
     <string name="SPAFriendsList">Friends List</string>
     <string name="SPAReceivedRequest">Received SPA Requests</string>
+    <string name="SPASendRequest">Send SPA Requests</string>
     <string name="SPAResult">SPA Result</string>
     <string name="SPAPrivacyDetailHelp">Choose privacy settings being proposed by SPA. Long tap for policy type.</string>
     <string name="SPASecurityDetailHelp">Choose security settings being proposed by SPA. Long tap for policy type.</string>
